add letsencrypt issuer

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,7 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_EXAMPLE: ENC[AES256_GCM,data:CJuEVXDD5tzQsKK8SDjm2Qd6EouOEqjnbb4eVKvMOEMOB2y6BRsEtZcQHK7ojjJdxmwD7V9FXmtiYYi/z1KU4m0KBwCww6jsPiTODJvUUS9z,iv:tv4a7zGia+ksqUsASXoFEw1EtFoCYk5HqhTe3QpMr8g=,tag:XZFF/l3G/siCpERQ/rAdUw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:TZLbKuQ=,iv:s/3KeXjt0z+cJYXEAXcZ8K4VZFBcgc36YNj8r7apIec=,tag:YsWY+Ky6QNrU24PbKmkhbA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:CSc0ACQZXnwbWFSXagyvuoA7+1Ia,iv:KR060hCXbEJDo4N66eP7QnL4naIdg9jGLDttrvtDGy4=,tag:TzHWgAlrXcU5MWXDVOmngg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -20,8 +21,8 @@ sops:
             c0UxWUhkTFZENzU5Q2JHRWdNZHhHT0kK4VNWdET30qog0YofcU0xej+vlTwMYL/O
             W4x8LNWJOvLpKvvuX88PST7PoYFc27zTh8R4gZA18ViNkLBrNzrmkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-28T22:40:38Z"
-    mac: ENC[AES256_GCM,data:5O5qZakE/G0v7YPvDQSeC6bWDXrvPQJ7lYiUj0ZBhUhIdRXYfNHvqaWBDfmqakapE4/cEYj5ZUjSvoXC4RHvdDhEjOhNr1sWwZMtsI0bCnP/QvpMeyBHHCDZXHP97bOq3UH47oW+xqqu96fENP/ydWH8JCFL8IZJPvE09tU2BDA=,iv:JWRaSGN/GpUv0fvalOH/kckL9nkgorhEHJQyI+QAWSw=,tag:MYRQhmbG5j2kra7oqSgrSg==,type:str]
+    lastmodified: "2024-12-29T12:56:13Z"
+    mac: ENC[AES256_GCM,data:gQl3VwI8/RgnEO1/51M75o3hI/SaAUf8TLjBc9vyR6lfZHrrMHx3hsx1/N3t3F+oOzMsm/yZ3MX5CDkiDFRQsJA92c/ecgwipcoKgyCZ51LwQa8nzki9dlm4opuld2Kd11SJ4RR7cYrWvDQFRUeKC2W4/QZ4fzE1o7ibTh0kUgE=,iv:1e10IPzIN8uHiLFVbIAzzhmqIKO7FGXzgyJcfESy6j0=,tag:lgVQQRbMg2387LqQVsQ4Cg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
