--- a/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cert-manager-secret
+    name: cert-domain-tls-key-"${SECRET_DOMAIN}"
 stringData:
     api-token: ENC[AES256_GCM,data:+AGl7htXBCnHm+yJPKG5IgKi5AUONDGQ8qW/ig==,iv:4rAItxM1X+ptCx+Y30l7/xUapzo+/4dHgtCZIcObCi0=,tag:3FO4v4MHTUpBONgxG1TD5A==,type:str]
 sops:
@@ -19,8 +19,8 @@ sops:
             ckN5aXJIcVFJU1ZDSG1PK29EZnFna2MKsyZqDqoyR89GZ49Pag/xBQ/NFr3KAMfJ
             rYfhCXgG0iVESBioYe0EglObguxBxQl3hXF/qPQhc17TUdgJ0ReaUw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T12:52:35Z"
-    mac: ENC[AES256_GCM,data:7+ejWlKGwHsfo4BFIDV2cFJK7QJgBT6DhYQ+MjbAZECAafWoGrvbXh3WpT3IocwogVXTLvCNB4fMhbOgpCfFNAzbKNbfZwPjwX6m6TSBMyq3hE0ZUX9Zl6aICM1mRf3I0PHcJ7PMr6+3s1Ki/9RD8z5Ldzwh7oB8yOYiJ/gen9U=,iv:xOZvG7JK0dSDPc9auYbIH8TggwVgCe0vGqvxggdMh4k=,tag:kcpF8Ir8hNPezcfnjadVSw==,type:str]
+    lastmodified: "2024-12-29T14:43:46Z"
+    mac: ENC[AES256_GCM,data:OliHFlRJOBdVCnJEkYEc6Povb1h1UOa74F0QgSTYoVlg+FF3rCriP/yEYmdU00LamZf8YVg10Trj2nqTTPqSdCdumcuyq5wLRYCt/cvPC+ZPp/s3MsaeXdOF+ZpzZej0LUxIsxL0w3YGdWuA8UOV+gscdJhGVWeqWc1KTkXouz8=,iv:hbVXvMJehlCvJ+aktDocDN5/cgC9ID1Dg4bUS9dfIY4=,tag:sbH+mg0UigAPPgoDgbH6kg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
