--- a/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
@@ -1,39 +1,42 @@
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-production
-spec:
-  acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
-    email: "${SECRET_ACME_EMAIL}"
-    privateKeySecretRef:
-      name: letsencrypt-production
-    solvers:
-      - dns01:
-          cloudflare:
-            apiTokenSecretRef:
-              name: cert-manager-secret
-              key: api-token
-        selector:
-          dnsZones:
-            - "${SECRET_DOMAIN}"
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-staging
+  name: desec-http
 spec:
   acme:
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
     email: "${SECRET_ACME_EMAIL}"
+    server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
-      name: letsencrypt-staging
+      name: cert-manager-desec-http-secret
     solvers:
-      - dns01:
-          cloudflare:
-            apiTokenSecretRef:
-              name: cert-manager-secret
-              key: api-token
-        selector:
-          dnsZones:
-            - "${SECRET_DOMAIN}"
+    - dns01:
+        webhook:
+          groupName: "${SECRET_DOMAIN}"
+          solverName: desec-http
+          config:
+            apiUrl: https://desec.io/api/v1
+            domainName: "${SECRET_DOMAIN}"
+            secretName: cert-domain-tls-key-"${SECRET_DOMAIN}"
+            secretKeyName: desec-token
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: desec-http-staging
+spec:
+  acme:
+    email: "${SECRET_ACME_EMAIL}"
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: cert-manager-desec-http-secret
+    solvers:
+    - dns01:
+        webhook:
+          groupName: "${SECRET_DOMAIN}"
+          solverName: desec-http
+          config:
+            apiUrl: https://desec.io/api/v1
+            domainName: "${SECRET_DOMAIN}"
+            secretName: cert-domain-tls-key-"${SECRET_DOMAIN}"
+            secretKeyName: desec-token
