update desec webhook

--- a/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/secret.sops.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: cert-domain-tls-key-"${SECRET_DOMAIN}"
+    name: desec-token-secret
 stringData:
-    api-token: ENC[AES256_GCM,data:+AGl7htXBCnHm+yJPKG5IgKi5AUONDGQ8qW/ig==,iv:4rAItxM1X+ptCx+Y30l7/xUapzo+/4dHgtCZIcObCi0=,tag:3FO4v4MHTUpBONgxG1TD5A==,type:str]
+    token: ENC[AES256_GCM,data:9K2+yLlX2+UwnjBxJOqmW1I9R3rwSo2fmaA6IA==,iv:oFQghoAmatjijJIV/vzTXoTHIuiCtYxt7m5P7p8ENt4=,tag:ZFYeuGQdYsB8Zmi8d6g3AA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -19,8 +19,8 @@ sops:
             ckN5aXJIcVFJU1ZDSG1PK29EZnFna2MKsyZqDqoyR89GZ49Pag/xBQ/NFr3KAMfJ
             rYfhCXgG0iVESBioYe0EglObguxBxQl3hXF/qPQhc17TUdgJ0ReaUw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-12-29T14:43:46Z"
-    mac: ENC[AES256_GCM,data:OliHFlRJOBdVCnJEkYEc6Povb1h1UOa74F0QgSTYoVlg+FF3rCriP/yEYmdU00LamZf8YVg10Trj2nqTTPqSdCdumcuyq5wLRYCt/cvPC+ZPp/s3MsaeXdOF+ZpzZej0LUxIsxL0w3YGdWuA8UOV+gscdJhGVWeqWc1KTkXouz8=,iv:hbVXvMJehlCvJ+aktDocDN5/cgC9ID1Dg4bUS9dfIY4=,tag:sbH+mg0UigAPPgoDgbH6kg==,type:str]
+    lastmodified: "2024-12-29T19:51:55Z"
+    mac: ENC[AES256_GCM,data:Q+SHevgkIwmynJ6JGk6bqobxItN2pW5SvucOA9WmOC+wSgLrQit8ZDCdGk1G2FU5lplGQ/uybuyzTCIwyPVTc+Ctb+8uY4GvXoEpeH5e8jJ8VaF9ukioXz7nSCP68BBhtYhRwPP9Zrtsuv0mE9FatIe3lIOEryWeNvi6/kJW5JA=,iv:227RXOLljeInpGsvmR0F/uhSOE53hPT6pFsjkHP725k=,tag:t2JtKW7UQhZ3S3firrNnpQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.2
