--- a/kubernetes/apps/cert-manager/cert-manager/certificates/certificates.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/certificates/certificates.yaml
@@ -2,13 +2,14 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${SECRET_DOMAIN}-cert"
+  name: "${SECRET_DOMAIN}-tls"
   namespace: cert-manager
 spec:
   commonName: "${SECRET_DOMAIN}"
   dnsNames:
     - "${SECRET_DOMAIN}"
+    - "*.${SECRET_DOMAIN}"
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
-  secretName: "${SECRET_DOMAIN}-cert"
+  secretName: "${SECRET_DOMAIN}-tls"
