--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -1,4 +1,5 @@
 ---
+# yaml-language-server: $schema=https://raw.githubusercontent.com/fluxcd-community/flux2-schemas/main/helmrelease-helm-v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
@@ -8,7 +9,7 @@ spec:
   chart:
     spec:
       chart: cert-manager
-      version: v1.16.2
+      version: v1.17.1
       sourceRef:
         kind: HelmRepository
         name: jetstack
@@ -20,12 +21,6 @@ spec:
     cleanupOnFail: true
     remediation:
       retries: 3
-  values:
-    crds:
-      enabled: true
-    dns01RecursiveNameservers: https://1.1.1.1:443/dns-query,https://1.0.0.1:443/dns-query
-    dns01RecursiveNameserversOnly: true
-    prometheus:
-      enabled: true
-      servicemonitor:
-        enabled: true
+  valuesFrom:
+    - kind: ConfigMap
+      name: cert-manager-helm-values
