chore: add talhelper encrypted secret :lock:

--- a/kubernetes/bootstrap/talos/clusterconfig/.gitignore
+++ b/kubernetes/bootstrap/talos/clusterconfig/.gitignore
@@ -5,3 +5,6 @@ home-kubernetes-talos-node-1.yaml
 home-kubernetes-talos-node-2.yaml
 home-kubernetes-talos-node-3.yaml
 talosconfig
+kubernetes-talos-controller-1.yaml
+kubernetes-talos-controller-2.yaml
+kubernetes-talos-controller-3.yaml
