--- a/kubernetes/flux/components/common/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/components/common/cluster-secrets.sops.yaml
@@ -1,27 +1,28 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: cluster-secrets
+    name: cluster-secrets
 stringData:
-  SECRET_EXAMPLE: ENC[AES256_GCM,data:xjvlOAmWKJMJZQxpRzda2S4oJtku8pJ4HlerMQFWW4TMaE6NkGys78Xt1xu5IVlRACTQmfSBKmkrpvf5WutlfIfEuPd8WV8=,iv:lcvAWW0YgEqx7fYliTNxBJiA+JRn4+67RgsBuB/sCiA=,tag:tmBHi/6JhnYdKz0w89Aw5g==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:90H2aCo=,iv:XNg4rjKET+IYqz9gfVb8YwFoceI8sGXINYE77kf7OXk=,tag:lm3epClOKq95DQ7CUMUkTA==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:4VNPHfy25e2GS7Pg+zA7ezO2Ylz7,iv:Cq5VVqpKGRfkglmZU2weUb6e5PAE5u/irFb1fAXohqE=,tag:XJNbrwsdwyxR99NA4VI9wQ==,type:str]
 sops:
-  kms: []
-  gcp_kms: []
-  azure_kv: []
-  hc_vault: []
-  age:
-    - recipient: age1r9dmr3ax8nuke3zhjgn3q9chvuwqy45lcflqfuecqc4psu40zfvq57xych
-      enc: |
-        -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpdjVXTEVKNkJCeVJ1WDF3
-        cUE1dVZ6dExqVkQvZ3h1aFk1RXZNWCtVMHh3CnhGeDRsajVoeE1qRE9velJrUXNP
-        ckMzT2gzR2Y3N0ZBMTdpQnhBMk5uSkEKLS0tIHkwZUljVitNT2ZLYW9JNkJWNEVx
-        WmcyVVNIS082cCs2dnRKbVJsZk0ra1kKFMogVybfUwGGOytrwr/rQdGWk9bsqDPt
-        LnE2KwUHKchkM/f5YRbbbyv7+l6Q0Y/PItX6x3mdSG0HPE/pzzMHAQ==
-        -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-02-16T11:13:20Z"
-  mac: ENC[AES256_GCM,data:qmlOX7EY5fT5UH8K1roSUMAIZ0jTqj33l0CRje2+V+/kTmDedqvqOpCKN39r0dIma9rF6TIQ0p5zTWIfHf4gah3ZfgY0YAW1ISG+VGb8b1iKszByIUHX3sPwrGXdAn6Ozeo2Rs1YuB+bgKELlaiYzd6PGJzwrt+XT7GPFNym3I0=,iv:bybg6vDEJfF0SKouFsiWJSW1gJ9AquGaowly3QoAgZs=,tag:caYGsZ+lmM/pKZLcpjDyPw==,type:str]
-  pgp: []
-  encrypted_regex: ^(data|stringData)$
-  mac_only_encrypted: true
-  version: 3.9.4
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1r9dmr3ax8nuke3zhjgn3q9chvuwqy45lcflqfuecqc4psu40zfvq57xych
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBpdjVXTEVKNkJCeVJ1WDF3
+            cUE1dVZ6dExqVkQvZ3h1aFk1RXZNWCtVMHh3CnhGeDRsajVoeE1qRE9velJrUXNP
+            ckMzT2gzR2Y3N0ZBMTdpQnhBMk5uSkEKLS0tIHkwZUljVitNT2ZLYW9JNkJWNEVx
+            WmcyVVNIS082cCs2dnRKbVJsZk0ra1kKFMogVybfUwGGOytrwr/rQdGWk9bsqDPt
+            LnE2KwUHKchkM/f5YRbbbyv7+l6Q0Y/PItX6x3mdSG0HPE/pzzMHAQ==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2025-02-17T22:11:44Z"
+    mac: ENC[AES256_GCM,data:+/mX4P1u5rvzEMVyY+uAFoJHevflMOnuFdPcV3mHA/HSjTtS3id3IqEoh/UXcSaJf95U8brwPaYp1RA68vDYs222RtQr0vliUtQvIiEQgQHgiOj75zn0ZnAw23MNWGhnsAxBaRipwOv+6Asl4UNSK0muTQ7naW0CooqUe4sjAsU=,iv:DyrVEr2GUzOQYbHULt46W1nkKPuPId77P4uboF4Rg+E=,tag:ejpSLTExR6mxi+h5UztChA==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    mac_only_encrypted: true
+    version: 3.9.4
