--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./cilium.yaml
   - ./controlplaneio.yaml
   - ./coredns.yaml
+  - ./desec.yaml
   - ./external-dns.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
