--- a/kubernetes/apps/cert-manager/cert-manager/certificates/certificates.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/certificates/certificates.yaml
@@ -2,7 +2,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${SECRET_DOMAIN}-tls"
+  name: "${SECRET_DOMAIN}-staging-tls"
   namespace: cert-manager
 spec:
   commonName: "${SECRET_DOMAIN}"
@@ -12,4 +12,4 @@ spec:
   issuerRef:
     name: letsencrypt-staging
     kind: ClusterIssuer
-  secretName: "${SECRET_DOMAIN}-tls"
+  secretName: "${SECRET_DOMAIN}-staging-tls"
