--- a/kubernetes/apps/cert-manager/cert-manager/certificates/certificates.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/certificates/certificates.yaml
@@ -13,3 +13,19 @@ spec:
     name: letsencrypt-staging
     kind: ClusterIssuer
   secretName: "${SECRET_DOMAIN}-staging-tls"
+
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: "${SECRET_DOMAIN}-tls"
+  namespace: cert-manager
+spec:
+  commonName: "${SECRET_DOMAIN}"
+  dnsNames:
+    - "${SECRET_DOMAIN}"
+    - "*.${SECRET_DOMAIN}"
+  issuerRef:
+    name: letsencrypt
+    kind: ClusterIssuer
+  secretName: "${SECRET_DOMAIN}-tls"
