--- a/kubernetes/apps/network/internal/ingress-nginx/helmrelease.yaml
+++ b/kubernetes/apps/network/internal/ingress-nginx/helmrelease.yaml
@@ -3,13 +3,13 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: nginx-external
+  name: &app internal-ingress-nginx
 spec:
   interval: 30m
   chart:
     spec:
       chart: ingress-nginx
-      version: 4.11.3
+      version: 4.12.0
       sourceRef:
         kind: HelmRepository
         name: ingress-nginx
@@ -23,25 +23,26 @@ spec:
       strategy: rollback
       retries: 3
   values:
-    fullnameOverride: nginx-external
+    fullnameOverride: *app
     controller:
       replicaCount: 2
       service:
         annotations:
-          # external-dns.alpha.kubernetes.io/hostname: &hostname external.${SECRET_DOMAIN}
-          lbipam.cilium.io/ips: 192.168.5.59
+          external-dns.alpha.kubernetes.io/hostname: &hostname internal.devbu.io
+          lbipam.cilium.io/ips: 192.168.42.121
       ingressClassResource:
-        name: external
-        default: false
-        controllerValue: k8s.io/external
+        name: internal
+        default: true
+        controllerValue: k8s.io/internal
       admissionWebhooks:
         objectSelector:
           matchExpressions:
             - key: ingress-class
               operator: In
-              values: ["external"]
-      allowSnippetAnnotations: true
+              values: ["internal"]
       config:
+        allow-snippet-annotations: true
+        annotations-risk-level: Critical
         block-user-agents: "AdsBot-Google,Amazonbot,anthropic-ai,Applebot-Extended,Bytespider,CCBot,ChatGPT-User,ClaudeBot,Claude-Web,cohere-ai,Diffbot,FacebookBot,FriendlyCrawler,Google-Extended,GoogleOther,GPTBot,img2dataset,omgili,omgilibot,peer39_crawler,peer39_crawler/1.0,PerplexityBot,YouBot," # taken from https://github.com/ai-robots-txt/ai.robots.txt
         client-body-buffer-size: 100M
         client-body-timeout: 120
@@ -56,17 +57,14 @@ spec:
         keep-alive: 120
         log-format-escape-json: "true"
         log-format-upstream: >
-          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr",
-          "x_forwarded_for": "$proxy_add_x_forwarded_for", "request_id": "$req_id",
-          "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time,
-          "status": $status, "vhost": "$host", "request_proto": "$server_protocol",
-          "path": "$uri", "request_query": "$args", "request_length": $request_length,
-          "duration": $request_time,"method": "$request_method", "http_referrer": "$http_referer",
+          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr", "x_forwarded_for": "$proxy_add_x_forwarded_for",
+          "request_id": "$req_id", "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time,
+          "status": $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri", "request_query": "$args",
+          "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer",
           "http_user_agent": "$http_user_agent"}
         proxy-body-size: 0
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
-        use-geoip2: true
         use-forwarded-headers: "true"
       metrics:
         enabled: true
@@ -75,8 +73,8 @@ spec:
           namespaceSelector:
             any: true
       extraArgs:
-        default-ssl-certificate: network/${SECRET_DOMAIN}-tls
-        # publish-status-address: *hostname
+        default-ssl-certificate: cert-manager/devbu-io-tls
+        publish-status-address: *hostname
       terminationGracePeriodSeconds: 120
       publishService:
         enabled: false
