--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -13,5 +13,7 @@ resources:
   - ./jetstack.yaml
   - ./k8s-gateway.yaml
   - ./metrics-server.yaml
+  - ./piraeus.yaml
+  - ./rook-ceph.yaml
   - ./spegel.yaml
   - ./stakater.yaml
